--- a/administrador.html
+++ b/administrador.html
@@ -45,7 +45,8 @@
                             Carrito</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link activo" href="administrador.html"><i class="fa-solid fa-screwdriver-wrench"></i> Administrar</a>
+                        <a class="nav-link activo" href="administrador.html"><i
+                                class="fa-solid fa-screwdriver-wrench"></i> Administrar</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="login.html"><i class="fa-solid fa-user-xmark"></i> Logout</a>
@@ -67,49 +68,58 @@
                 <h2>EDITAR CARRUSEL PÁGINA PRINCIPAL</h2>
                 <table class="table table-striped">
                     <thead>
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Titulo</th>
-                        <th scope="col">Texto</th>
-                        <th scope="col">Editar</th>
-                      </tr>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Titulo</th>
+                            <th scope="col">Texto</th>
+                            <th scope="col">Editar</th>
+                        </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Horizon Forbidden West</td>
-                        <td>Las aventuras de Aloy continúan</td>
-                        <td>
-                            <div class="row">
-                                <a href="editar.html" class="boton-crud boton-editar"><i class="fa-solid fa-pen-to-square"></i></a>
-                                <a href="eliminar.html" class="boton-crud boton-eliminar"><i class="fa-solid fa-trash"></i></a>
-                            </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">2</th>
-                        <td>God of War</td>
-                        <td>Vuelve el Dios de la Guerra</td>
-                        <td>
-                            <div class="row">
-                                <a href="editar.html" class="boton-crud boton-editar"><i class="fa-solid fa-pen-to-square"></i></a>
-                                <a href="eliminar.html" class="boton-crud boton-eliminar"><i class="fa-solid fa-trash"></i></a>
-                            </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td>Horizon Zero Dawn</td>
-                        <td>Descubre el pasado de Aloy</td>
-                        <td>
-                            <div class="row">
-                                <a href="editar.html" class="boton-crud boton-editar"><i class="fa-solid fa-pen-to-square"></i></a>
-                                <a href="eliminar.html" class="boton-crud boton-eliminar"><i class="fa-solid fa-trash"></i></a>
-                            </div>
-                        </td>
-                      </tr>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Horizon Forbidden West</td>
+                            <td>Las aventuras de Aloy continúan</td>
+                            <td>
+                                <div class="row">
+                                    <a href="editar.html" class="boton-crud boton-editar"><i
+                                            class="fa-solid fa-pen-to-square"></i></a>
+                                    <a href="eliminar.html" class="boton-crud boton-eliminar"><i
+                                            class="fa-solid fa-trash"></i></a>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>God of War</td>
+                            <td>Vuelve el Dios de la Guerra</td>
+                            <td>
+                                <div class="row">
+                                    <a href="editar.html" class="boton-crud boton-editar"><i
+                                            class="fa-solid fa-pen-to-square"></i></a>
+                                    <a href="eliminar.html" class="boton-crud boton-eliminar"><i
+                                            class="fa-solid fa-trash"></i></a>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>Horizon Zero Dawn</td>
+                            <td>Descubre el pasado de Aloy</td>
+                            <td>
+                                <div class="row">
+                                    <a href="editar.html" class="boton-crud boton-editar"><i
+                                            class="fa-solid fa-pen-to-square"></i></a>
+                                    <a href="eliminar.html" class="boton-crud boton-eliminar"><i
+                                            class="fa-solid fa-trash"></i></a>
+                                </div>
+                            </td>
+                        </tr>
                     </tbody>
-                  </table>
+                </table>
+                <div class="d-flex justify-content-end">
+                    <a href="agregar.html" class="btn btn-success">Agregar</a>
+                </div>
             </section>
             <!--FIN DE CARRUSEL-->
 
@@ -118,82 +128,97 @@
                 <h2>EDITAR CATÁLOGO DE JUEGOS</h2>
                 <table class="table table-striped">
                     <thead>
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Compra</th>
-                        <th scope="col">Precio</th>
-                        <th scope="col">Editar</th>
-                      </tr>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Compra</th>
+                            <th scope="col">Precio</th>
+                            <th scope="col">Editar</th>
+                        </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Horizon Zero Dawn</td>
-                        <td>$40USD</td>
-                        <td>
-                            <div class="row">
-                                <a href="editar.html" class="boton-crud boton-editar"><i class="fa-solid fa-pen-to-square"></i></a>
-                                <a href="eliminar.html" class="boton-crud boton-eliminar"><i class="fa-solid fa-trash"></i></a>
-                            </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">2</th>
-                        <td>Horizon Forbidden West</td>
-                        <td>$60USD</td>
-                        <td>
-                            <div class="row">
-                                <a href="editar.html" class="boton-crud boton-editar"><i class="fa-solid fa-pen-to-square"></i></a>
-                                <a href="eliminar.html" class="boton-crud boton-eliminar"><i class="fa-solid fa-trash"></i></a>
-                            </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td>God of War</td>
-                        <td>$40USD</td>
-                        <td>
-                            <div class="row">
-                                <a href="editar.html" class="boton-crud boton-editar"><i class="fa-solid fa-pen-to-square"></i></a>
-                                <a href="eliminar.html" class="boton-crud boton-eliminar"><i class="fa-solid fa-trash"></i></a>
-                            </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">4</th>
-                        <td>Juego 4</td>
-                        <td>$40USD</td>
-                        <td>
-                            <div class="row">
-                                <a href="editar.html" class="boton-crud boton-editar"><i class="fa-solid fa-pen-to-square"></i></a>
-                                <a href="eliminar.html" class="boton-crud boton-eliminar"><i class="fa-solid fa-trash"></i></a>
-                            </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">5</th>
-                        <td>Juego 5</td>
-                        <td>$60USD</td>
-                        <td>
-                            <div class="row">
-                                <a href="editar.html" class="boton-crud boton-editar"><i class="fa-solid fa-pen-to-square"></i></a>
-                                <a href="eliminar.html" class="boton-crud boton-eliminar"><i class="fa-solid fa-trash"></i></a>
-                            </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">6</th>
-                        <td>Juego 6</td>
-                        <td>$40USD</td>
-                        <td>
-                            <div class="row">
-                                <a href="editar.html" class="boton-crud boton-editar"><i class="fa-solid fa-pen-to-square"></i></a>
-                                <a href="eliminar.html" class="boton-crud boton-eliminar"><i class="fa-solid fa-trash"></i></a>
-                            </div>
-                        </td>
-                      </tr>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Horizon Zero Dawn</td>
+                            <td>$40USD</td>
+                            <td>
+                                <div class="row">
+                                    <a href="editar.html" class="boton-crud boton-editar"><i
+                                            class="fa-solid fa-pen-to-square"></i></a>
+                                    <a href="eliminar.html" class="boton-crud boton-eliminar"><i
+                                            class="fa-solid fa-trash"></i></a>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>Horizon Forbidden West</td>
+                            <td>$60USD</td>
+                            <td>
+                                <div class="row">
+                                    <a href="editar.html" class="boton-crud boton-editar"><i
+                                            class="fa-solid fa-pen-to-square"></i></a>
+                                    <a href="eliminar.html" class="boton-crud boton-eliminar"><i
+                                            class="fa-solid fa-trash"></i></a>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>God of War</td>
+                            <td>$40USD</td>
+                            <td>
+                                <div class="row">
+                                    <a href="editar.html" class="boton-crud boton-editar"><i
+                                            class="fa-solid fa-pen-to-square"></i></a>
+                                    <a href="eliminar.html" class="boton-crud boton-eliminar"><i
+                                            class="fa-solid fa-trash"></i></a>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">4</th>
+                            <td>Juego 4</td>
+                            <td>$40USD</td>
+                            <td>
+                                <div class="row">
+                                    <a href="editar.html" class="boton-crud boton-editar"><i
+                                            class="fa-solid fa-pen-to-square"></i></a>
+                                    <a href="eliminar.html" class="boton-crud boton-eliminar"><i
+                                            class="fa-solid fa-trash"></i></a>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">5</th>
+                            <td>Juego 5</td>
+                            <td>$60USD</td>
+                            <td>
+                                <div class="row">
+                                    <a href="editar.html" class="boton-crud boton-editar"><i
+                                            class="fa-solid fa-pen-to-square"></i></a>
+                                    <a href="eliminar.html" class="boton-crud boton-eliminar"><i
+                                            class="fa-solid fa-trash"></i></a>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">6</th>
+                            <td>Juego 6</td>
+                            <td>$40USD</td>
+                            <td>
+                                <div class="row">
+                                    <a href="editar.html" class="boton-crud boton-editar"><i
+                                            class="fa-solid fa-pen-to-square"></i></a>
+                                    <a href="eliminar.html" class="boton-crud boton-eliminar"><i
+                                            class="fa-solid fa-trash"></i></a>
+                                </div>
+                            </td>
+                        </tr>
                     </tbody>
-                  </table>
+                </table>
+                <div class="d-flex justify-content-end">
+                    <a href="agregar.html" class="btn btn-success">Agregar</a>
+                </div>
             </section>
             <!--FIN DE CATÁLOGO-->
 
@@ -205,7 +230,8 @@
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-4 border-top">
             <p class="col-md-4 mb-0 black">&copy; 2022 Tienda Juegos</p>
 
-            <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+            <a href="index.html"
+                class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
                 <img src="imagenes/logo.png" height="50" width="50"></img>
             </a>
 
@@ -214,7 +240,8 @@
                     <a href="index.html" class="nav-link px-2 black"><i class="fa-solid fa-home"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a href="carrito.html" class="nav-link px-2 black"><i class="fa-solid fa-shopping-cart"></i> Carrito</a>
+                    <a href="carrito.html" class="nav-link px-2 black"><i class="fa-solid fa-shopping-cart"></i>
+                        Carrito</a>
                 </li>
                 <li class="nav-item">
                     <a href="cuenta.html" class="nav-link px-2 black"><i class="fa-solid fa-user"></i> Cuenta</a>
