--- a/agregar.html
+++ b/agregar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar | Tienda Juegos</title>
+    <title>Agregar | Tienda Juegos</title>
     <link rel="shortcut icon" href="imagenes/favicon.ico">
 
     <!--Bootstrap-->
@@ -60,31 +60,30 @@
     <main>
         <div class="container">
             <header>
-                <h1 class="mt-3 text-center text-md-start">HORIZON ZERO DAWN</h1>
+                <h1 class="mt-3 text-center text-md-start">AGREGAR VIDEOJUEGO</h1>
             </header>
 
             <!--JUEGO-->
             <section>
-                <h2>DETALLES DEL JUEGO</h2>
                 <form enctype="multipart/form-data">
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre del juego</label>
-                        <input type="text" class="d-block input_form" id="nombre" value="Horizon Zero Dawn"
+                        <input type="text" class="d-block input_form" id="nombre"
                             placeholder="Nuevo nombre del juego">
                     </div>
                     <div class="mb-3">
                         <label for="precio" class="form-label">Precio (USD)</label>
-                        <input type="number" class="d-block input_form" id="precio" value="40"
+                        <input type="number" class="d-block input_form" id="precio"
                             placeholder="Nuevo precio">
                     </div>
                     <div class="mb-3">
                         <label for="categoria1" class="form-label">Categoría 1</label>
-                        <input type="text" class="d-block input_form" id="categoria1" value="Acción"
+                        <input type="text" class="d-block input_form" id="categoria1"
                             placeholder="Nueva categoría para el juego">
                     </div>
                     <div class="mb-3">
                         <label for="categoria2" class="form-label">Categoría 2</label>
-                        <input type="text" class="d-block input_form" id="categoria2" value="Aventura"
+                        <input type="text" class="d-block input_form" id="categoria2"
                             placeholder="Nueva categoría para el juego">
                     </div>
                     <div class="mb-3">
@@ -92,7 +91,7 @@
                         <input type="file" accept=".jpg" class="d-block input_form" id="imagen">
                         <p class="mt-1">Tamaño imagen recomendada: 1920x1080p (16:9)</p>
                     </div>
-                    <button type="submit" class="btn boton-credenciales">Actualizar juego</button>
+                    <button type="submit" class="btn boton-credenciales">Agregar juego</button>
                 </form>
             </section>
             <!--FIN DE JUEGO-->
