--- a/agregar.html
+++ b/agregar.html
@@ -118,7 +118,7 @@
                         Carrito</a>
                 </li>
                 <li class="nav-item">
-                    <a href="cuenta.html" class="nav-link px-2 black"><i class="fa-solid fa-user"></i> Cuenta</a>
+                    <a href="administrador.html" class="nav-link px-2 black"><i class="fa-solid fa-screwdriver-wrench"></i> Admin</a>
                 </li>
                 <li class="nav-item">
                     <a href="login.html" class="nav-link px-2 black"><i class="fa-solid fa-user-xmark"></i> Logout</a>
